Fix missing game screen element

--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,28 @@
             </div>
         </div>
 
+        <!-- Game Screen -->
+        <div id="screen-game" class="screen">
+            <div id="scoreboard" class="scoreboard"></div>
+
+            <div class="game-container">
+                <!-- Handicap Visuals -->
+                <div id="handicapMeterContainer" class="handicap-meter-container">
+                    <div id="handicapMeterBar" class="handicap-meter-bar"></div>
+                </div>
+
+                <div id="wordBox" class="word-box">
+                    <div id="wordJapanese" class="word-jp">READY</div>
+                    <div id="wordReading" class="word-reading">...</div>
+                    <div id="wordRomaji" class="word-romaji"></div>
+                </div>
+
+                <div id="gameProgressBar" class="main-progress-container"></div>
+
+                <div id="feedbackOverlay" class="feedback-overlay">GET!</div>
+            </div>
+        </div>
+
         <!-- Result Screen -->
         <div id="screen-result" class="screen">
             <h1>RESULT</h1>
