feat: Add force-end-game button for host

--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,8 @@
         <div id="screen-game" class="screen">
             <div id="scoreboard" class="scoreboard"></div>
 
+            <button id="btnForceEnd" class="btn btn-secondary" style="display: none; position: absolute; top: 70px; right: 20px; z-index: 100;">強制終了</button>
+
             <div class="game-container">
                 <!-- Handicap Visuals -->
                 <div id="handicapMeterContainer" class="handicap-meter-container">
